Eliminate LinkedList from any class that might be persisted. We don't want it, it will cause problems with activation.
git-svn-id: file:///home/toad/git-migration/temprepository/branches/db4o/freenet@20856 67a373e5-eb02-0410-a15c-ee090a768436